--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
-  "dependencies": {
-    "express": "^5.1.0"
-  }
+  "name": "garden-hub-server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
